<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dev.app.futuremd.DashBoardFragment">

    <LinearLayout
        android:id="@+id/ll_dashboard_item_my_account"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/ll_dashboard_item_medical_vault"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/ll_dashboard_item_find_doctor"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/colorFuncItemDashboardHighlight">

        <ImageView
            android:layout_width="@dimen/image_size_func_item_dashboard"
            android:layout_height="@dimen/image_size_func_item_dashboard"
            android:src="@drawable/ic_dashboard_my_account" />

        <TextView
            style="@style/CustomizedFuncItemTextViewInDashboard"
            android:text="@string/title_my_account" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_dashboard_item_find_doctor"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/ll_dashboard_item_appointments"
        app:layout_constraintLeft_toRightOf="@+id/ll_dashboard_item_my_account"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="@dimen/image_size_func_item_dashboard"
            android:layout_height="@dimen/image_size_func_item_dashboard"
            android:src="@drawable/ic_dashboard_find_doctor" />

        <TextView
            style="@style/CustomizedFuncItemTextViewInDashboard"
            android:text="@string/title_find_doctor" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_dashboard_item_appointments"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/ll_dashboard_item_settings"
        app:layout_constraintLeft_toRightOf="@+id/ll_dashboard_item_medical_vault"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_dashboard_item_find_doctor"
        android:background="@color/colorFuncItemDashboardHighlight">

        <ImageView
            android:layout_width="@dimen/image_size_func_item_dashboard"
            android:layout_height="@dimen/image_size_func_item_dashboard"
            android:src="@drawable/ic_dashboard_appointments" />

        <TextView
            style="@style/CustomizedFuncItemTextViewInDashboard"
            android:text="@string/title_appointments" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_dashboard_item_medical_vault"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/ll_dashboard_item_favorites"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/ll_dashboard_item_appointments"
        app:layout_constraintTop_toBottomOf="@+id/ll_dashboard_item_my_account">

        <ImageView
            android:layout_width="@dimen/image_size_func_item_dashboard"
            android:layout_height="@dimen/image_size_func_item_dashboard"
            android:src="@drawable/ic_dashboard_medical_vault" />

        <TextView
            style="@style/CustomizedFuncItemTextViewInDashboard"
            android:text="@string/title_medical_vault" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_dashboard_item_favorites"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/ll_dashboard_item_settings"
        app:layout_constraintTop_toBottomOf="@+id/ll_dashboard_item_medical_vault"
        android:background="@color/colorFuncItemDashboardHighlight">

        <ImageView
            android:layout_width="@dimen/image_size_func_item_dashboard"
            android:layout_height="@dimen/image_size_func_item_dashboard"
            android:src="@drawable/ic_dashboard_favorites" />

        <TextView
            style="@style/CustomizedFuncItemTextViewInDashboard"
            android:text="@string/title_favorites" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_dashboard_item_settings"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/ll_dashboard_item_favorites"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_dashboard_item_appointments">

        <ImageView
            android:layout_width="@dimen/image_size_func_item_dashboard"
            android:layout_height="@dimen/image_size_func_item_dashboard"
            android:src="@drawable/ic_dashboard_settings" />

        <TextView
            style="@style/CustomizedFuncItemTextViewInDashboard"
            android:text="@string/title_settings" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>